# shadow

./: .gitignore  CLAUDE.md  README.md  install.py  pyproject.toml
claude/: CLAUDE.md
claude/commands/: chain.md  dupcheck.md  hunt.md  learn.md  new.md  oob.md  report.md  sync.md  validate.md
commands/: chain.md  dupcheck.md  hunt.md  new.md  oob.md  report.md  shadow-chain.md  shadow-dupcheck.md  shadow-hunt.md  shadow-learn.md  shadow-new.md  shadow-oob.md  shadow-report.md  shadow-sync.md  shadow-validate.md  validate.md
shadow/: __init__.py  __main__.py
shadow/agents/: __init__.py  chain.py  dupcheck.py  hunt.py  learn.py  recon.py  report.py  validate.py
shadow/cli/: __init__.py  main.py
shadow/core/: __init__.py  audit.py  brain.py  cvss.py  dedup.py  engagement.py  learn.py  models.py  opsec.py  scope.py  session.py  store.py  toolcheck.py  validate.py
shadow/hooks/: __init__.py  pre_save_check.py  scope_check.py
shadow/mcp/: __init__.py  bounty_platforms.py  server.py  (+1 more)
tests/: __init__.py  test_audit.py  test_bugcrowd.py  test_chain.py  test_cvss.py  test_dedup.py  test_dupcheck_agent.py  test_engagement.py  test_hackerone.py  test_hunt.py  test_installer.py  test_interactsh.py  test_learn.py  test_mcp_bundle.py  test_models.py  test_mutator.py  test_oob.py  test_opsec.py  test_payload_engine.py  test_payload_feedback.py  test_payload_fingerprint.py  test_platform_factory.py  test_recon.py  test_report.py  test_scope.py  test_selfhosted.py  test_session.py  test_store.py  test_toolcheck.py  test_validate.py  test_validate_agent.py
(+30 files in other folders)
